force-app/main/default/objects/RollingMill__c/RollingMill__c.object-meta.xml
<CustomObject>
    <label>Rolling Mill</label>
    <nameField>
        <label>Rolling Mill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rolling Mills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>