force-app/main/default/objects/RollingMill__c/fields/DimensionFrom__c.field-meta.xml
<CustomField>
    <fullName>DimensionFrom__c</fullName>
    <label>Dimension from</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>