force-app/main/default/objects/RollingMill__c/fields/DimenstionTo__c.field-meta.xml
<CustomField>
    <fullName>DimenstionTo__c</fullName>
    <label>Dimension to</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>