force-app/main/default/objects/RollingMill__c/fields/RollingMill__c.field-meta.xml
<CustomField>
    <fullName>RollingMill__c</fullName>
    <label>Rolling mill</label>
    <length>255</length>
    <type>Text</type>
</CustomField>